--- a/portfolio.html
+++ b/portfolio.html
@@ -42,39 +42,41 @@
                       <div class="row">
                         <div class="col">
                             <div class="card text-white text-center bg-secondary mb-3">
-                                <img class="card-img-top img-fluid" src="assets/images2/PBJpalspic.png" alt="PBJ Pals">
+                                <img class="card-img-top img-fluid" src="assets/images2/passwordimage2.png" alt="Password Generator screenshot">
                               <div class="card-body text-center">
-                                  <h4 class="card-title">PBJ Site</h4>
-                                    <a href="PBJSiteActivity3.html" target="_blank" alt="PBJ Site">Check It Out</a>
-                              </div>
+                                  <h4 class="card-title">Password Generator</h4>
+                                    <a href="https://juliealmeria.github.io/PasswordGenerator/" target="_blank" alt="PBJ Site">Check It Out</a>
+                                  </div>
                             </div>
                           </div>
-                          <div class="col">
+                       
+                            <div class="col";>
                             <div class="card text-white text-center bg-secondary mb-3">
-                                <img class ="card-img-top img-fluid" src="assets/images2/PBJpalspic.png" alt="PBJ Pals">
+                                <img class ="card-img-top img-fluid" src="assets/images2/quizimage2.jpg" alt="Coding Quiz screenshot">
                               <div class="card-body text-center">
-                                <h4 class="card-title">PBJ Site</h4>
-                                <a href="PBJSiteActivity3.html" target="_blank" alt="PBJ Site">Check It Out</a>
-                              </div>
+                                <h4 class="card-title">Coding Quiz</h4>
+                                <a href="https://juliealmeria.github.io/CodeQuizFinal/" target="_blank" alt="Coding Quiz">Check It Out</a>
+                              
+                            </div>
                             </div>
                           </div>
                         </div>
                           <div class="row">
                             <div class="col">
                               <div class="card text-white text-center bg-secondary mb-3">
-                                    <img class="card-img-top img-fluid" src="assets/images2/PBJpalspic.png" alt="PBJ Pals">
+                                    <img class="card-img-top img-fluid" src="assets/images2/calendarimage.png" alt="Calendar Image">
                                   <div class="card-body text-center">
-                                      <h4 class="card-title">PBJ Site</h4>
-                                        <a href="PBJSiteActivity3.html" target="_blank" alt="PBJ Site">Check It Out</a>
+                                      <h4 class="card-title">Work Day Planner</h4>
+                                        <a href=" https://juliealmeria.github.io/DayPlanner/" target="_blank" alt="Day Planner Site">Check It Out</a>
                                   </div>
                                 </div>
                               </div>
                               <div class="col">
                                 <div class="card text-white text-center bg-secondary mb-3">
-                                        <img class="card-img-top img-fluid" src="assets/images2/PBJpalspic.png" alt="PBJ Pals">
+                                        <img class="card-img-top img-fluid" src="assets/images2/gameimage.png" alt="PBJ Pals">
                                       <div class="card-body text-center">
-                                          <h4 class="card-title">PBJ Site</h4>
-                                            <a href="PBJSiteActivity3.html" target="_blank" alt="PBJ Site">Check It Out</a>
+                                          <h4 class="card-title">Cheesy Puffs Game</h4>
+                                            <a href="https://scratch.mit.edu/projects/340006175/" target="_blank" alt="Cheesy Puffs">Check It Out</a>
                                       </div>
                                     </div>
                           </div>
